--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,3 +12,9 @@ jobs:
       contents: write
     steps:
       - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          user: danielklecha
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: UTC
